# pubsub_doubleNode_template_wifi_ROS2

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/pubsub_template_uros/lib/pubsub_template_uros/: listener  talker
install/pubsub_template_uros/share/ament_index/resource_index/package_run_dependencies/: pubsub_template_uros
install/pubsub_template_uros/share/ament_index/resource_index/parent_prefix_path/: pubsub_template_uros
install/pubsub_template_uros/share/pubsub_template_uros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pubsub_template_uros/share/pubsub_template_uros/cmake/: pubsub_template_urosConfig-version.cmake  pubsub_template_urosConfig.cmake
install/pubsub_template_uros/share/pubsub_template_uros/environment/: ament_prefix_path.dsv  path.dsv
install/pubsub_template_uros/share/pubsub_template_uros/launch/: launch_pubSub.py
log/: latest_build
src/pubsub_template_uros/: CMakeLists.txt  package.xml
src/pubsub_template_uros/launch/: launch_pubSub.py
src/pubsub_template_uros/src/: listener.cpp  talker.cpp
