<package format="3">
  <name>pubsub_template_uros</name>
  <version>0.0.1</version>
  <description>Template ROS2 C++ for the comunication with micro-ROS</description>

  <maintainer email="mcf.donato@gmail.com">Emanuele Donato</maintainer>
  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

